[build-system]
requires = ["poetry_core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["pghistory"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "pytest.mark.skip",
    "@(typing\\.)?overload",
    "if TYPE_CHECKING:",
]
omit = [
    "pghistory/tests/wsgi.py"
]
show_missing = true
fail_under = 100

[tool.poetry]
name = "django-pghistory"
packages = [
  { include = "pghistory" }
]
exclude = [
  "*/tests/"
]
version = "3.2.0"
description = "History tracking for Django and Postgres"
authors = ["Wes Kendall"]
classifiers = [
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Django",
  
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/Opus10/django-pghistory"
repository = "https://github.com/Opus10/django-pghistory"
documentation = "https://django-pghistory.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
django = ">=3"
django-pgtrigger = ">=4.9.0"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "4.11.1"
black = "24.4.0"
dj-database-url = "2.1.0"
django-extensions = "3.1.3"
git-tidy = "1.2.0"
pytest = "7.4.2"
pytest-cov = "4.1.0"
pytest-dotenv = "0.5.2"
pytest-django = "4.5.2"
pytest-mock = "3.6.1"
django-dynamic-fixture = "4.0.1"
pillow = "10.0.1"
tox = "4.11.3"
ruff = "0.3.7"
pyright = "1.1.358"
mkdocs = "1.5.3"
mkdocs-material = "9.5.18"
mkdocstrings-python = "1.9.2"
footing = "*"
setuptools = "*"
poetry-core = "*"
typing-extensions = "4.11.0"
django-stubs = "4.2.7"
psycopg2-binary = "2.9.9"

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "pghistory/tests"
norecursedirs = ".venv"
addopts = "--reuse-db"
DJANGO_SETTINGS_MODULE = "settings"

[tool.ruff]
lint.select = ["E", "F", "B", "I", "G", "C4"]
line-length = 99
target-version = "py38"

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/migrations/**",
    "**/tests/**",
]
pythonVersion = "3.8"
typeCheckingMode = "standard"
