[build-system]
requires = ["poetry_core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["pghistory"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "pytest.mark.skip",
    "@(typing\\.)?overload",
    "if TYPE_CHECKING:",
]
omit = [
    "pghistory/tests/wsgi.py"
]
show_missing = true
fail_under = 100

[tool.poetry]
name = "django-pghistory"
packages = [
  { include = "pghistory" }
]
exclude = [
  "*/tests/"
]
version = "3.4.2"
description = "History tracking for Django and Postgres"
authors = ["Wes Kendall"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/Opus10/django-pghistory"
repository = "https://github.com/Opus10/django-pghistory"
documentation = "https://django-pghistory.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
django = ">=4"
django-pgtrigger = ">=4.12.0"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "4.11.1"
django-extensions = "3.1.3"
git-tidy = "1.2.0"
pytest = "8.3.2"
pytest-cov = "5.0.0"
pytest-dotenv = "0.5.2"
pytest-django = "4.8.0"
pytest-mock = "3.6.1"
django-dynamic-fixture = "4.0.1"
pillow = "10.0.1"
tox = "4.18.0"
ruff = "0.6.2"
pyright = "1.1.377"
mkdocs = "1.6.0"
black = "24.8.0"
mkdocs-material = "9.5.33"
mkdocstrings-python = "1.10.8"
footing = "*"
setuptools = "*"
poetry-core = "*"
typing-extensions = "4.12.2"
django-stubs = "5.0.4"
dj-database-url = "2.2.0"
psycopg2-binary = "2.9.9"

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "pghistory/tests"
norecursedirs = ".venv"
addopts = "--reuse-db"
DJANGO_SETTINGS_MODULE = "settings"

[tool.ruff]
lint.select = ["E", "F", "B", "I", "G", "C4"]
line-length = 99
target-version = "py38"

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/migrations/**",
    "**/tests/**",
]
pythonVersion = "3.8"
typeCheckingMode = "standard"
